syntax = "proto2";

package vct.col.ast;

import "vct/col/ast/BigInt.proto";

message BigDecimal {
  required int32 scale = 1;
  required BigInt unscaledValue = 2;
}