syntax = "proto2";

package vct.col.ast;

/* Big-endian two's complement variable-length integer. If the most
 * significant bit of the first byte is 1, you may imagine that this bit is
 * "sign-extended" left into infinity.
 */
message BigInt {
  required bytes data = 1;
}