syntax = "proto2";

package vct.col.ast;

message BitString {
  required bytes data = 1;
  required int32 skipAtLastByte = 2;
}